tests/baselines/reference/computedPropertyNames51_ES5(strict=true).errors.txt
computedPropertyNames51_ES5.ts(5,9): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
computedPropertyNames51_ES5.ts(5,10): error TS2454: Variable 't' is used before being assigned.
computedPropertyNames51_ES5.ts(6,10): error TS2454: Variable 'k' is used before being assigned.


==== computedPropertyNames51_ES5.ts (3 errors) ====
    function f<T, K extends keyof T>() {
        var t: T;
        var k: K;
        var v = {
            [t]: 0,
            ~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
             ~
!!! error TS2454: Variable 't' is used before being assigned.
            [k]: 1
             ~
!!! error TS2454: Variable 'k' is used before being assigned.
        };
    }
    